Created a new citation for relax which concatenates both the d'Auvergne and Gooley 2008 papers.
This is to show to those who are unaware of back-to-back paper concatenation rules how to cite both
papers using one reference, saving a lot of space.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -1778,6 +1778,16 @@
   year           = 2008
 }
 
+@Article{dAuvergneGooley08ab,
+  Author         = {d'Auvergne, E. J. and Gooley, P. R.},
+  Title          = {Optimisation of {NMR} dynamic models},
+  Journal        = jbnmr,
+  Volume         = {40},
+  Number         = {2},
+  Pages          = {107-133},
+  year           = 2008
+}
+
 @Article{Davis94,
   Author         = {Davis, D.G. and Perlman, M.E. and London, R.E.},
   Title          = {Direct measurements of the dissociation-rate constant
