--- a/docs/latex/citations.tex
+++ b/docs/latex/citations.tex
@@ -27,6 +27,11 @@ The primary citations for relax are:
   \item \bibentry{dAuvergneGooley08b}
 \end{itemize}
 
+If space is at a premium, the standard rules for concatenating back-to-back papers can be used:
+\begin{itemize}
+  \item \bibentry{dAuvergneGooley08ab}
+\end{itemize}
+
 
 % Graphical user interface.
 %~~~~~~~~~~~~~~~~~~~~~~~~~~
