Updated the CHANGES file for relax 3.1.7.

--- a/docs/CHANGES
+++ b/docs/CHANGES
@@ -1,3 +1,111 @@
+Version 3.1.7
+(17 March 2014, from /trunk)
+http://svn.gna.org/svn/relax/tags/3.1.7
+
+    Features:
+        * Large amounts of new infrastructure for the R1rho relaxation dispersion analysis type.
+        * More hardware information printed out when using the '--info' command line option.
+        * The user function relax_disp.write_disp_curves now produces plots of R2eff verses the rotating frame tilt angle theta.
+        * Small improvements for the relaxation dispersion GUI tutorial and citation chapter of the relax manual.
+
+
+    Changes:
+        * Added text file for the articles reference values from the global fit in Relax_disp.test_r1rho_kjaergaard.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.  This is from optimisation of the Kjaergaard et al., 2013 Off-resonance R1rho relaxation dispersion experiments using the 'DPL' model.  This uses the data from Kjaergaard's paper at DOI: http://dx.doi.org/10.1021/bi4001062.
+        * Replaced "_" with "-" in text file with global fit residues.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Sorted the reference values in residue order.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Added reference data and guess data for a global fit R1rho analysis.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.  This system test is setup comparison with paper values, and will be turned off later to prevent long running time.
+        * Redid dict() keys for unit test of find_intensity_keys(), to pass on Python 3.2 and 3.3.  Work in progress for Bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.  This is a response to message: http://thread.gmane.org/gmane.science.nmr.relax.devel/5132.
+        * Added ":" to dictionary keys to match return from spin_loop in system test Relax_disp.test_r1rho_kjaergaard.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Removed model 'No Rex' to be tested in system test Relax_disp.test_r1rho_kjaergaard.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Aliased spins in system test Relax_disp.test_r1rho_kjaergaard.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Set opt_func_tol = 1e-15 and opt_max_iterations = 100000 to run system test Relax_disp.test_r1rho_kjaergaard faster.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Re-ordered code lines in system test Relax_disp.test_r1rho_kjaergaard.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Assigned guess values for system test Relax_disp.test_r1rho_kjaergaard.  Regarding bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Added a section at the start of the dispersion GUI analysis tutorial about 'computation time'.  This is for the dispersion chapter of the manual.
+        * Removed alias of spins in system test Relax_disp.test_r1rho_kjaergaard.  Work in progress for Bug #21344, (https://gna.org/bugs/?21344) - Handling of in sparse acquired R1rho dataset with missing combinations of time and spin-lock field strengths.
+        * Added fitted R1 values from paper to system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This will be used to test the output of calculating Omega_eff, as stated in http://article.gmane.org/gmane.science.nmr.relax.devel/5148.
+        * Added reading of R1 values in system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added full manual steps of analysis for system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Modified the directory separator from "/" to os.sep in system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Commented out the commands for writing of text files and state files to speed up system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added the testing of writing out theta values in system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added the parameter "theta" to specific_analyses/relax_disp/api.py.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Modified parameter py_type to dict() for the theta value.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added parameter "theta" do description tables.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Made an assertion that spin contains attribute "theta" in system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added unit test for return_offset_data.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This is development according to thread http://thread.gmane.org/gmane.science.nmr.relax.devel/5157.
+        * Commented out the expectation of the attribute "theta" to exist in system test Relax_disp.test_r1rho_kjaergaard.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Imported return_param_key_from_data to be used in unit test return_offset_data.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * The relax information printout, from "relax -i" for example, now includes detailed CPU information.  This uses operating system specific commands to obtain this information which is not available from the platform Python module.
+        * Removed the dependence on subprocess.check_output() as this is only for Python 2.7 and higher.  This is for the relax information printout about the CPU info recently introduced.
+        * The RAM in the relax information printout is now displayed for Mac OS X.  The 'sysctl' command is now being used to retrieve the RAM size and total memory, and the swap is calculated as the difference.
+        * Added the OMP relaxation rates and compressed PDB file to the repository.  This is to allow users to have a full data set to perform a test model-free analysis with.
+        * Added a sample_script to generate theta values for R1rho data.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  The script is explained at the wiki: http://wiki.nmr-relax.com/Sample_scripts.relax_disp.return_offset_data
+        * Created a new citation for relax which concatenates both the d'Auvergne and Gooley 2008 papers.  This is to show to those who are unaware of back-to-back paper concatenation rules how to cite both papers using one reference, saving a lot of space.
+        * Added lib.rotating_frame module containing functions related to rotating frame NMR calculations.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added rotating_frame to lib.__init__.py.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added unit test file _lib.test_rotating_frame.py to __init__.py.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added unit test file _lib.test_rotating_frame().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  These unit test will be used to calculate and return dictionaries of tilt_angles, Delta_omega and omega_eff.  Some of the R1rho data mentioned in: http://www.nmr-relax.com/manual/Dispersion_model_summary.html.
+        * Added link to manual for calculating NMR parameters in the doctring for lib.rotating_frame.py.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Renamed function "calc_tilt_angle" to "calc_rotating_frame_params" in lib.rotating_frame.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This is to reflect, that the function should return and store spin values of both tilt_angles, Delta_omega and omega_eff.
+        * Replaced with calc_rotating_frame_params in unit test, to reflect function renaming.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Improved docstring in lib.rotating_frame.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Rearranged the citations in the citations chapter.  The references for relax are now far more prominent.
+        * Implemented the return of Delta_omega = "average resonance offset in the rotating frame" in specific_analysis.relax_disp.return_offset_data.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Fixed unpacking of return from function calls of return_offset_data.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Made specific_analysis.relax_disp.return_offset_data return "w_eff" - the effective field in rotating frame in rad/s.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Fixed unpacking of return from function calls of return_offset_data, since w_eff is now also returned.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Moved calc_rotating_frame_params() to specific_analysis.relax_disp.disp_data.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This is in a response to message: http://www.mail-archive.com/relax-devel@gna.org/msg05080.html.
+        * Started unit test for _specific_analysis._relax_disp.test_disp_data.test_calc_rotating_frame_params.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This is in response to message: http://www.mail-archive.com/relax-devel@gna.org/msg05080.html.
+        * Removed lib.test_rotating_frame.py and the associated unit test.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This is in response to http://www.mail-archive.com/relax-devel@gna.org/msg05080.html.
+        * Made calc_rotating_frame_params take spin "The spin system specific data container" as input.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Modified calc_rotating_frame_params() to operate on the level of spin container and ID.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Modified unit test test_calc_rotating_frame_params to use spin container and ID in test.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Epydoc docstring fix for the Structure.test_bug_21522_master_record_atom_count system test.  This is for the API documentation at http://www.nmr-relax.com/api/3.1/index.html.
+        * Epydoc docstring fix for the SetValue() method of the File input GUI element.  This is for the API documentation at http://www.nmr-relax.com/api/3.1/index.html.
+        * Removed the test_suite/shared_data directory from the API documentation scanning.  This is to avoid trying to import the frame order relax scripts which cannot be imported into Python.
+        * Added epydoc information about dimensions for w_e in function return_offset_data.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added verbosity flag to calc_rotating_frame_params() to allow switching of print information.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added unit test for use of value.write to write theta values calculated from calc_rotating_frame_params().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Extended unit test for use of value.write to write intensities file.  This is to test that changing of the API function will retain its function.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Replaced API function in specific_analysis.relax_disp.api to calculate and return values for parameter theta when this is requested.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  Implemented according to http://www.mail-archive.com/relax-devel@gna.org/msg05082.html.
+        * Extended API function in specific_analysis.relax_disp.api to calculate and return values for parameter theta when this is requested.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  Implemented according to http://www.mail-archive.com/relax-devel@gna.org/msg05082.html.
+        * Variable renaming and closing of files in unit test test_value_write_calc_rotating_frame_params().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Extended unit test test_value_write_calc_rotating_frame_params() to also test writing of w_eff values.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Fixed typo and removed grace string for parameter description of theta.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added parameter 'w_eff', the effective field in rotating frame calculation to dispersion API.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added handling of calculating w_eff in dispersion API.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added unit to parameter description of theta and w_eff.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Fix for field count and added check for R1rho type in calc_rotating_frame_params().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added grace string to parameter description of theta and w_eff.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Fixed code duplication in relax_disp API, for calculation of theta and w_eff.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Removed unused lines of code in unit test test_return_offset_data().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Moved unit test of value writing of calc_rotating_frame_params() into separate system tests.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added system test Relax_disp.test_value_write_calc_rotating_frame_params_auto_analysis().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This is to test the auto_analysis value.write function to write theta and w_eff values for an R1rho setup.
+        * Added writing of parameters theta and w_eff for an auto-analysis if model in MODEL_LIST_R1RHO_FULL.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added return of None values for function calc_rotating_frame_params() if spin is not selected.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Extended system test Relax_disp.test_value_write_calc_rotating_frame_params_auto_analysis() to test the writing of theta values.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Hardcoded the writing of R2eff as function of the tilt angle Theta, when using the user function relax_disp.write_disp_curves.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  Theta values per spin will be written if the spin.model is in the list MODEL_LIST_R1RHO_FULL.
+        * Fix for return of None tuble in calc_rotating_frame_params().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Fix for correct use of assertNotEqual or assertEqual in Relax_disp system tests.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Hardcoded contents of writing of parameters theta and w_eff in system test Relax_disp.test_value_write_calc_rotating_frame_params_auto_analysis().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This is to better support testing of key ordering and different architectures, etc.
+        * Fixed code duplication in specific_analysis.relax_disp.disp_data.write_disp_curves().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Modified system test of hardcoded values of theta and w_eff to match precision to 14 digits.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Fix for handling the writing of theta.out and w_eff.out in relax_disp auto_analysis, when model is not of R1rho type.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This was discovered using the system tests.
+        * Fix for calculating the theta angle describing the tilted rotating frame relative to the laboratory, when omega1 / Delta_omega is negative.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This follows discussion in: http://thread.gmane.org/gmane.science.nmr.relax.devel/5205.
+        * Modified unit and system test to reflect new calculation of rotating frame tilt angle Theta.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.  This was discussed in thread: http://thread.gmane.org/gmane.science.nmr.relax.devel/5205.
+        * Added interpolation calculation of theta and w_eff, when dispersion points are interpolated.  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+        * Added printout of Omega, the average resonance offset, in calc_rotating_frame_params().  Regarding sr #3124, (https://gna.org/support/?3124) - Grace graphs production for R1rho analysis with R2_eff as function of Omega_eff.
+
+
+    Bugfixes:
+        * Typo fix for text in the model-free GUI auto-analysis.  The maximum iterations for the protocol was misspelled in the GUI.  This was spotted by Hessam Nasrollah.
+        * Fix for one of the frame order system tests when using the Mac OS X application binary.  The problem was that the 'shared_data' directory could not be found as it was not included in the test_suite package __all__ list.
+        * Fix for bug #21754 (https://gna.org/bugs/?21754).  This is the failure of the grace.view user function on MS Windows in opening a file in qtgrace when the path includes spaces, as reported by Mengjun Xue (mengjun dott xue att mailbox dott tu-berlin dott de).  The fix was to run the program with the file name in double quotes.
+        * Fix for bug #21763 (https://gna.org/bugs/?21763).  This is the problem of the chi2 value not being visible in the parameter list of the grace.write and value.write user functions in the GUI.  The problem was that when asking for the parameter name list, the minimisation parameters were not being asked for.
+
+
+
 Version 3.1.6
 (28 February 2014, from /trunk)
 http://svn.gna.org/svn/relax/tags/3.1.6
