Redesign and standardisation of the peak intensity data structure throughout all analyses in relax.
The various structures 'intensities', 'intensity_err', 'intensity_sim', 'sim_intensity', and
'intensity_bc' have all been renamed.  The new structures are called 'peak_intensity',
'peak_intensity_err', 'peak_intensity_sim' and 'peak_intensity_bc'.  This allows the structure to be
processed as a standard parameter in the specific analysis API.  One very visible consequence is
that plots of peak intensities, as well as value files, will now have peak intensity errors.

For backwards compatibility, the relax data store method _back_compat_hook() has been modified to
catch all previous peak intensity object variants and to standardise and rename these to the new
object names.

As the parameter is now called 'peak_intensity' rather than 'intensities', all calls to the
grace.write and value.write for this parameter have been changed in the auto-analyses, the sample
scripts, the test suite and the manual.

--- a/docs/latex/noe.tex
+++ b/docs/latex/noe.tex
@@ -84,7 +84,7 @@ calc()
 value.write(param='noe', file='noe.out', force=True)
 
 # Create Grace files.
-grace.write(y_data_type='intensities', file='intensities.agr', force=True)
+grace.write(y_data_type='peak_intensity', file='intensities.agr', force=True)
 grace.write(y_data_type='noe', file='noe.agr', force=True)
 
 # View the Grace files.
@@ -319,7 +319,7 @@ The two commands
 
 \begin{lstlisting}[firstnumber=39]
 # Create Grace files.
-grace.write(y_data_type='intensities', file='intensities.agr', force=True)
+grace.write(y_data_type='peak_intensity', file='intensities.agr', force=True)
 grace.write(y_data_type='noe', file='noe.agr', force=True)
 \end{lstlisting}
 
