Updated the relaxation dispersion citation for relax as this is now officially published.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -5228,8 +5228,12 @@
 
 @Article{Morin14,
   author = {Morin, S. and Linnet, T. E. and Lescanne, M. and Schanda, P. and Thompson, G. S. and Tollinger, M. and Teilum, K. and Gagn\'e, S. and Marion, D. and Griesinger, C. and Blackledge, M. and d'Auvergne, E. J.},
-  title = {relax: the analysis of biomolecular kinetics using {NMR} relaxation dispersion data},
-  journal = {Submitted},
+  title = {relax: the analysis of biomolecular kinetics and thermodynamics using {NMR} relaxation dispersion data},
+  journal = bioinformatics,
+  abstract = {Nuclear Magnetic Resonance (NMR) is a powerful tool for observing the motion of biomolecules at the atomic level. One technique, the analysis of relaxation dispersion phenomenon, is highly suited for studying the kinetics and thermodynamics of biological processes. Built on top of the relax computational environment for NMR dynamics is a new dispersion analysis designed to be comprehensive, accurate and easy to use. The software supports more models, both numeric and analytic, than current solutions. An automated protocol, available for scripting and driving the GUI, is designed to simplify the analysis of dispersion data for NMR spectroscopists. Decreases in optimisation time are granted by parallelisation for running on computer clusters and by skipping an initial grid search by using parameters from one solution as the starting point for another – using analytic model results for the numeric models, taking advantage of model nesting, and using averaged non-clustered results for the clustered analysis.Availability: The software relax is written in Python with C modules and is released under the GPLv3+ licence. Source code and precompiled binaries for all major operating systems are available from http://www.nmr-relax.com. Contact: edward@nmr-relax.com}, 
+  url = {http://bioinformatics.oxfordjournals.org/content/early/2014/04/09/bioinformatics.btu166.abstract}, 
+  eprint = {http://bioinformatics.oxfordjournals.org/content/early/2014/04/09/bioinformatics.btu166.full.pdf+html}, 
+  doi = {10.1093/bioinformatics/btu166},
   year = {2014}
 }
 
