Added the missing Bioinformatics to the bibtex file journal name aliases.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -19,6 +19,9 @@
 % Biochemistry.
 @STRING{biochem     = "Biochemistry"}
 
+% Bioinformatics.
+@STRING{bioinformatics = "Bioinformatics"}
+
 % Biometrika.
 @STRING{biometrika  = "Biometrika"}
 
