--- a/docs/latex/dispersion_software.tex
+++ b/docs/latex/dispersion_software.tex
@@ -79,6 +79,7 @@ Off-resonance effects (CPMG-type data)          & \no  & \no  & \yes & \no  & \n
 Off-resonance effects ($\Ronerho$-type data)    & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  & \yes \\
 Support for TROSY-type data                     & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
 Support for CEST-type data                      & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \yes & \no  \\
+Support for scalar coupling effects             & \no  & \no  & \yes & \no  & \no  & \no  & \no  & \no  & \no  \\
 Arrhenius / Van't Hoff analysis                 & \no  & \yes & \no  & \yes & \yes & \no  & \no  & \no  & \no  \\
 ZZ exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
 HD exchange                                     & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  & \no  \\
