Renamed the relax_disp.cpmg_frq user function to relax_disp.cpmg_setup and added some new options.
This follows from the thread http://thread.gmane.org/gmane.science.nmr.relax.devel/5511/focus=5520.

The ncyc_even option has been added so the user can specify if the pulse sequence requires an even
number of CPMG blocks.  This is for use in the interpolated dispersion curves, but could have other
uses in the future.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -2197,7 +2197,7 @@ for id, file, cpmg_frq, H_frq in data:
     relax_disp.exp_type(spectrum_id=id, exp_type='SQ CPMG')
 
     # Set the relaxation dispersion CPMG frequencies.
-    relax_disp.cpmg_frq(spectrum_id=id, cpmg_frq=cpmg_frq)
+    relax_disp.cpmg_setup(spectrum_id=id, cpmg_frq=cpmg_frq)
 
     # Set the NMR field strength of the spectrum.
     spectrometer.frequency(id=id, frq=H_frq)
@@ -2486,7 +2486,7 @@ The next user function sets the CPMG frequencies for each spectrum:
 
 \begin{lstlisting}[firstnumber=102]
     # Set the relaxation dispersion CPMG frequencies.
-    relax_disp.cpmg_frq(spectrum_id=id, cpmg_frq=cpmg_frq)
+    relax_disp.cpmg_setup(spectrum_id=id, cpmg_frq=cpmg_frq)
 \end{lstlisting}
 
 For an $\Ronerho$-type experiment, these lines could be changed to:
