Expanded the 'CR72 full' dispersion model description in the manual to explain its origin.
This was discussed at http://thread.gmane.org/gmane.science.nmr.relax.devel/5410.

The equations used the Davis et al., 1994 simplified form, and this is now explained.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -432,6 +432,8 @@ where
     \zeta    &= 2\dw \left( \RtwozeroA - \RtwozeroB - \pA\kex + \pB\kex \right).
 \end{align}
 
+Note that these equations use the numerically simplified form derived in the appendix of \citet{Davis94}.
+
 This model is not accurate when the motional process is very slow.
 In that case, the `TSMFK01' model in Section~\ref{sect: dispersion: TSMFK01 model} on page~\pageref{sect: dispersion: TSMFK01 model} should be used instead.
 
